@@ -1,3 +1,4 @@
+* Default CSV encoding to UTF8 with BOM
 * Display the number of selected records
 * Humanize the count result
 * Add limit to search_count
